samples/_failures_safe/1761137548_908fb5_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_533e05fe.c: In function ‘main’:
./samples/SAFE/__tmp_533e05fe.c:161:5: error: expected declaration or statement at end of input
  161 |     }
      |     ^
